# golf-predictor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
golf_predictor/: globals.py  main.py
golf_predictor/eda/: eda.ipynb
