[project]
name = "golf_predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.2",
    "kagglehub>=0.3.10",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["golf_predictor"]
